--- a/Spring/Spring/src/main/webapp/WEB-INF/web.xml
+++ b/Spring/Spring/src/main/webapp/WEB-INF/web.xml
@@ -5,27 +5,57 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID"
 	version="3.0">
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:SpringDataSource.xml</param-value>
+		<param-value>classpath:SpringDataSource.xml,classpath:config.xml</param-value>
 	</context-param>
-
+	
+	<!-- 上下文激活默认Profile Bean -->
+	<context-param>
+	    <param-name>spring.profiles.default</param-name>
+	    <param-value>dev</param-value>
+	</context-param>
+	<!--  
+	<context-param>
+        <param-name>spring.profiles.active</param-name>
+        <param-value>pro</param-value>
+    </context-param>
+    -->
+    <!--  
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 	<servlet>
 		<servlet-name>springMVC</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:SpringMVC.xml</param-value>
+			<param-value>classpath:SpringMVC.xml,classpath:config.xml</param-value>
 		</init-param>
+		-->
+		<!-- Servlet激活默认Profile Bean -->
+		<!--  
+		<init-param>
+		    <param-name>spring.profiles.default</param-name>
+		    <param-value>dev</param-value>
+		</init-param>
+		-->
+		<!--  
+		<init-param>
+            <param-name>spring.profiles.active</param-name>
+            <param-value>pro</param-value>
+        </init-param>
+        -->
+        <!--  
+		<load-on-startup>1</load-on-startup>
 	</servlet>
+	-->
+	<!--  
 	<servlet-mapping>
 		<servlet-name>springMVC</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
+    -->
 	<filter>
 		<filter-name>UrlRewriteFilter</filter-name>
 		<filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
